♻️ :: 의존관계 변경